--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/common.css" type="text/css" />
 <title>无标题文档</title>
+<title>无标题文档</title>
 </head>
 
 
